--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,24 +1,26 @@
+# Step 1: Build the Docker image
+name: medi-go-backend-trigger
+description: Trigger to build FastAPI backend from GitHub
+source:
+  repoSource:
+    projectId: medi-go-eb65e
+    repoName: github_zeinasherif_medi-go-backend
+    branchName: master
+serviceAccount: projects/medi-go-eb65e/serviceAccounts/209756817692-compute@developer.gserviceaccount.com
+substitutions: {}
+tags: []
+triggerTemplate:
+  branchName: master
+  repoName: github_zeinasherif_medi-go-backend
+  projectId: medi-go-eb65e
+includedFiles:
+- '**'
 steps:
-  # Step 1: Build the Docker image
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/medi-go-eb65e/fastapi-backend', '.']
-
-  # Step 2: Push the Docker image to Google Container Registry
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/medi-go-eb65e/fastapi-backend']
-
-  # Step 3: Deploy to Cloud Run
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: gcloud
-    args:
-      - run
-      - deploy
-      - fastapi-backend
-      - --image=gcr.io/medi-go-eb65e/fastapi-backend
-      - --platform=managed
-      - --region=us-central1
-      - --allow-unauthenticated
-
-# Optional: Specify images this build produces
 images:
-  - gcr.io/medi-go-eb65e/fastapi-backend
+  - 'gcr.io/medi-go-eb65e/fastapi-backend'
+options:
+  logging: CLOUD_LOGGING_ONLY
