--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,9 @@
-steps:
-  # Step 1: Build the Docker image
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/medi-go-eb65e/fastapi-backend', '.']
+options:
+  logging: CLOUD_LOGGING_ONLY
 
-  # Step 2: Push the Docker image to Container Registry
+steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/medi-go-eb65e/fastapi-backend']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/fastapi-backend', '.']
 
 images:
-  - 'gcr.io/medi-go-eb65e/fastapi-backend'
+  - 'gcr.io/$PROJECT_ID/fastapi-backend'
