--- a/requirements.txt
+++ b/requirements.txt
@@ -1,206 +1,26 @@
-﻿absl-py==1.4.0
-altair==5.1.1
-annotated-types==0.7.0
-anyascii==0.3.2
-anyio==4.9.0
-anykeystore==0.2
-arabic-reshaper==3.0.0
-asttokens==3.0.0
-astunparse==1.6.3
-attrs==25.3.0
-beautifulsoup4==4.13.4
-build==1.1.1
-CacheControl==0.14.3
-cachetools==5.5.2
-catboost==1.2.8
-certifi==2025.4.26
-cffi==1.17.1
-charset-normalizer==3.4.2
-click==8.1.8
-cmake==3.28.3
-colorama==0.4.6
-comm==0.2.2
-contourpy==1.3.0
-contractions==0.1.73
-cryptography==45.0.2
-cycler==0.12.1
-dacite==1.9.2
-debugpy==1.8.14
-decorator==5.2.1
-deep-translator==1.11.4
-dnspython==2.7.0
-easyocr==1.7.2
-email_validator==2.2.0
-exceptiongroup==1.3.0
-executing==2.2.0
-fastapi==0.115.12
-filelock==3.18.0
-firebase-admin==6.8.0
-flatbuffers==23.5.26
-fonttools==4.58.0
-fsspec==2025.3.2
-gast==0.4.0
-google-api-core==2.24.2
-google-api-python-client==2.169.0
-google-auth==2.40.1
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.0.0
-google-cloud-core==2.4.3
-google-cloud-firestore==2.20.2
-google-cloud-storage==3.1.0
-google-crc32c==1.7.1
-google-pasta==0.2.0
-google-resumable-media==2.7.2
-googleapis-common-protos==1.70.0
-graphviz==0.20.3
-grpcio==1.71.0
-grpcio-status==1.71.0
-h11==0.16.0
-h5py==3.13.0
-htmlmin==0.1.12
-httplib2==0.22.0
-huggingface-hub==0.17.0
-hupper==1.12
-idna==3.10
-ImageHash==4.3.1
-imageio==2.37.0
-imbalanced-learn==0.12.4
-imblearn==0.0
-importlib_metadata==8.7.0
-importlib_resources==6.5.2
-ipykernel==6.29.5
-ipython==8.18.1
-jedi==0.19.2
-Jinja2==3.1.6
-safetensors==0.3.3
-scikit-image==0.24.0
-scikit-learn==1.6.1
-scikit-learn-extra==0.3.0
-scipy==1.13.1
-seaborn==0.13.2
-shapely==2.0.7
-six==1.17.0
-sniffio==1.3.1
-soupsieve==2.7
-stack-data==0.6.3
-starlette==0.46.2
-statsmodels==0.14.4
-sympy==1.14.0
-tangled-up-in-unicode==0.2.0
-tensorboard==2.13.0
-tensorboard-data-server==0.7.1
-tensorflow==2.13.0
-tensorflow-estimator==2.13.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.3.0
-textsearch==0.0.24
-threadpoolctl==3.6.0
-tifffile==2024.8.30
-tokenizers==0.13.3
-toolz==1.0.0
-torch==2.0.1
-torchaudio==0.9.0
-torchvision==0.15.2+cpu
-tornado==6.5
-tqdm==4.67.1
-traitlets==5.14.3
-transaction==3.1.0
-transformers==4.33.1
-translationstring==1.4
-typeguard==4.4.1
-typing_extensions==4.13.2
-tzdata==2025.2
-uritemplate==4.1.1
-urllib3==2.4.0
-uvicorn==0.34.2
-velruse==1.1.1
-venusian==3.0.0
-visions==0.7.5
-wcwidth==0.2.13
-WebOb==1.8.7
-Werkzeug==3.1.3
-windows-curses==2.3.2
-wordcloud==1.9.4
-wrapt==1.17.2
-WTForms==3.0.1F
-wtforms-recaptcha==0.3.2
-xgboost==2.1.4
-ydata-profiling==4.12.2
-zipp==3.21.0
-zope.deprecation==5.0
-zope.sqlalchemy==3.1
-
-joblib==1.5.0
-jsonschema==4.23.0
-jsonschema-specifications==2025.4.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-keras==2.13.1
-kiwisolver==1.4.7
-lazy_loader==0.4
-libclang==16.0.6
-lightgbm==4.6.0
-Markdown==3.8
-MarkupSafe==3.0.2
-matplotlib==3.9.4
-matplotlib-inline==0.1.7
-mpmath==1.3.0
-msgpack==1.1.0
-multimethod==1.12
-narwhals==1.40.0
-nest-asyncio==1.6.0
-networkx==3.2.1
-ninja==1.11.1.4
-numpy==1.24.4
-oauthlib==3.2.2
-opencv-python-headless==4.11.0.86
-opt-einsum==3.3.0
-package_name==0.1
-packaging==25.0
-pandas==2.2.3
-parso==0.8.4
-PasteDeploy==3.0.1
-patsy==1.0.1
-pbkdf2==1.3
-phik==0.12.4
-pillow==11.2.1
-plaster==1.1.2
-plaster-pastedeploy==1.0.1
-platformdirs==4.3.8
-plotly==6.1.0
-prompt_toolkit==3.0.51
-proto-plus==1.26.1
-protobuf==5.29.5
-psutil==7.0.0
-pure_eval==0.2.3
-pyahocorasick==2.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pybind11==2.11.1
-pybind11-global==2.11.1
-pyclipper==1.3.0.post6
-pycparser==2.22
-pydantic==2.10.6
-pydantic_core==2.27.2
-Pygments==2.19.1
-PyJWT==2.10.1
-pyparsing==3.2.3
-pyproject_hooks==1.0.0
-pyramid==2.0.2
-pyramid-mailer==0.15.1
-python-bidi==0.6.6
-python-dateutil==2.9.0.post0
-python-multipart==0.0.20
-python3-openid==3.2.0
-pytz==2025.2
-PyWavelets==1.6.0
-pywifi==1.1.12
-PyYAML==6.0.2
-pyzmq==26.4.0
-referencing==0.36.2
-regex==2024.11.6
-repoze.sendmail==4.4.1
-requests==2.32.3
-requests-oauthlib==1.3.1
-rpds-py==0.25.0
-rsa==4.9.1
+fastapi
+uvicorn
+firebase-admin
+pydantic==2.10.4
+email-validator 
+qrcode[pil]
+pandas
+numpy==1.23.5        
+tensorflow
+scikit-learn>=1.2
+catboost
+xgboost
+lightgbm
+joblib
+Pillow
+easyocr
+arabic-reshaper
+python-bidi           
+matplotlib
+plotly
+graphviz
+openpyxl
+pytz
+python-dotenv
+requests
+python-multipart     
