--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,7 +3,18 @@ options:
 
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/fastapi-backend', '.']
+    args: ['build', '-t', 'gcr.io/medi-go-eb65e/fastapi-backend', '.']
+
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:slim'
+    entrypoint: gcloud
+    args:
+      - run
+      - deploy
+      - fastapi-backend
+      - --image=gcr.io/medi-go-eb65e/fastapi-backend
+      - --region=us-central1       # 🔁 change this to your preferred region
+      - --platform=managed
+      - --allow-unauthenticated
 
 images:
   - 'gcr.io/$PROJECT_ID/fastapi-backend'
